Improved the immutable field TRUSTED_PACKAGES in the DefaultJackson2JavaTypeMapper class to a List.of method that returns an ImmutableList.